# lora-tweetsumm

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  fast.yaml  t5-base.yaml
notebooks/: exploration.ipynb
scripts/: demo.py  evaluate.py  experiments.py  train.py
space/: DEPLOY.md  README.md  app.py  requirements.txt
space-static/: README.md  index.html
src/: __init__.py  config.py  data.py  inference.py  model.py  train.py
tests/: conftest.py  test_config.py  test_data.py  test_inference.py  test_model.py
